--- a/Pages/Diagonal.html
+++ b/Pages/Diagonal.html
@@ -22,7 +22,7 @@
                     26.2.2021 <br><br>Revit, AutoCad, Blender, Photohsop
                     <br> <br>My entry for Nokia's idea competition held for Oulu University architecture sudents in
                     2021. Diagonal consists of five longitudinal ”logs” spreading across the lot.
-                    There are lower spaces with green roofs for laboratories and -- between
+                    There are lower spaces with green roofs for laboratories and between
                     these office tubes. An eight-story Central Hub slices the building,
                     offering passage and recreational spaces across the facility. The logs are
                     facing south to maximize sunlight intake, and they leave room for active
